# agentic-dev-interface

./: GETTING_STARTED.md  README.md  pyproject.toml
examples/config/: adi.yaml  models.yaml  policies.yaml
src/adi/: __init__.py
src/adi/cli/: backlog.py  main.py  repo.py  repos.py  spec.py  system.py  task.py
src/adi/config/: __init__.py  defaults.py
src/adi/engine/: __init__.py  agent_runner.py  artifact_store.py  config_loader.py  frontmatter.py  lock_manager.py  policy_evaluator.py  prompt_builder.py  repo_explorer.py  run_manager.py  scheduler.py  shell_runner.py  spec_planner.py  verifier.py  worktree_manager.py  yaml_utils.py
src/adi/models/: __init__.py  policy.py  repo.py  run.py  spec.py  task.py
src/adi/services/: __init__.py  backlog_service.py  orchestrator_service.py  repo_service.py  repos_service.py  spec_service.py  system_service.py  task_service.py
src/adi/templates/: repo.md  spec.md  task.md
src/adi/templates/prompts/: implementer.md  reviewer.md
tests/: test_agent_runner.py  test_artifact_store.py  test_backlog_run.py  test_backlog_show.py  test_config_loader.py  test_frontmatter.py  test_orchestrator_service.py  test_policy_evaluator.py  test_prompt_builder.py  test_repo_cli_smoke.py  test_repo_explorer.py  test_scheduler.py  test_spec_cli_flow.py  test_spec_model.py  test_spec_planner.py  test_system_cli.py  test_task_agent_loop.py  test_task_cli_smoke.py  test_task_model.py  test_verifier.py  test_worktree_manager.py
